Mise a jour du head

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
 <html lang="fr">
     <head>
-
+        <meta charset="UTF-8">
+        <link href="ASSETS/CSS/STYLES.css" rel="stylesheet" type="text/css">
+        <meta name="viewport" content="width=device-width">
+        <title>Portfolio</title>
     </head>
 
     <body>
