Mise a jour du header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <body>
         
         <header>
+            <div class="Ensemble_header">   
+                <div class="image_profil_header">
+ 
+                </div>
+                <div class="Titre_header">
 
+                </div>
+
+            </div>
 
         </header>
 
